...

    var id: String { rawValue }

    var label: String {
        switch self {
        case .triathlonSprint: return "Triathlon Sprint"
        case .triathlonOlympic: return "Triathlon Olympique"
        case .duathlon: return "Duathlon"
        case .run10k: return "10 km"
        case .halfMarathon: return "Semi-marathon"
        case .marathon: return "Marathon"
        case .ironman: return "Ironman"
        case .halfIronman: return "Semi-Ironman (70.3)"
        case .improveVMA: return "Améliorer sa VMA"
        case .weightLoss: return "Perdre du poids"
...
